# d3_svg_network

./: .gitignore  README.md  pyproject.toml
examples/: basic_svg.py  network_svg.py  network_svg_curved.py
src/d3_svg_network/: __init__.py
tests/: test_network_svg.py  test_selection.py
